2004-11-15  John Finlay  <finlay@moeraki.com>

	* pygtk-gdkdisplay.xml (store_clipboard)
	(request_selection_notification, supports_clipboard_persistence
	(supports_selection_notification): Add descriptions.

	* pygtk-gtktreeselection.xml (get_selected_rows): Remove model
	arg - not needed. Fixes #158397 (Ken Harris)

	* pygtk-gtkwindow.xml (gtk.window_set_default_icon_name)
	(get_icon_name, set_icon_name, get_focus_on_map, set_focus_on_map):
	Add descriptions.

	* pygtk-gtktreeview.xml (set_row_separator_func)
	(set_hover_expand, get_hover_expand, set_hover_selection)
	(get_hover_selection, set_fixed_height_mode, get_fixed_height_mode)
	("hover-selection", "hover-expand", "fixed-height-mode"):
	Add descriptions.

	* pygtk-gtktoolitem.xml (rebuild_menu): Add description
	("create-menu-proxy"): Update description.

	* pygtk-gtktextbuffer.xml (backspace, "tag-table"): Add descriptions.

2004-11-14  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkselectiondata.xml (data_targets_include_image)
	(get_uris, set_uris, get_pixbuf, set_pixbuf): Add descriptions.

	* pygtk-gtkmessagedialog.xml (format_secondary_text)
	(format_secondary_markup): Add descriptions.

	* pygtk-gtkmenutoolbutton.xml Add.

	* pygtk-gtkwidget.xml (menu_get_for_attach_widget): Add description.

	* pygtk-gtkmenu.xml ("tearoff-state") Add description.

	* pygtk-gtklabel.xml (Description): Update.
	(set_ellipsize, get_ellipsize, set_width_chars, get_width_chars)
	(get_single_line_mode, set_single_line_mode): Add descriptions.
	("ellipsize, "width-chars", "single-line-mode"): Add descriptions.

	* pygtk-pango-constant.xml Add Ellipsize Mode Constants.

	* pygtk-gtkimage.xml (gtk.image_new_from_icon_name)
	(get_icon_name, set_from_icon_name, set_pixel_size, get_pixel_size): 
	Add descriptions of these PyGTK 2.6 methods and function.
	(Description): Update.

2004-11-13  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkiconview.xml Add.
	* pygtk-gtk-classes.xml Add pygtk-pygtk-gtkiconview.xml
