@@ -159,7 +159,13 @@ linkend="method-gdkdragcontext--set-icon-stock">set_icon_stock</link></methodnam
       <methodsynopsis language="python">
 	<methodname><link
 linkend="method-gdkdragcontext--set-icon-default">set_icon_default</link></methodname>
-	<methodparam></methodparam>  </methodsynopsis>
+	<methodparam></methodparam>
+      </methodsynopsis>
+      <methodsynopsis language="python">
+	<methodname><link
+linkend="method-gdkdragcontext--drag-drop-succeeded">drag_drop_succeeded</link></methodname>
+	<methodparam></methodparam>
+      </methodsynopsis>
     </classsynopsis>
 
   </refsect1>
@@ -1052,6 +1058,29 @@ stock icon.</para>
 
       <para>The <methodname>set_icon_default</methodname>() method sets the
 icon for the drag to the default icon.</para>
+
+    </refsect2>
+
+  <refsect2 id="method-gdkdragcontext--drag-drop-succeeded">
+      <title>gtk.gdk.DragContext.drag_drop_succeeded</title>
+
+      <programlisting><methodsynopsis language="python">
+	  <methodname>drag_drop_succeeded</methodname>
+	  <methodparam></methodparam>
+        </methodsynopsis></programlisting>
+      <variablelist>
+	<varlistentry>
+	  <term><emphasis>Returns</emphasis>&nbsp;:</term>
+	  <listitem><simpara><literal>TRUE</literal> if the drop was
+successful.</simpara></listitem>
+	</varlistentry>
+      </variablelist>
+
+      <para>The <methodname>drag_drop_succeeded</methodname>() method
+returns <literal>TRUE</literal> if the dropped data has been successfully
+transferred. This method is intended to be used while handling a
+<literal>gtk.gdk.DROP_FINISHED</literal> event, its return value is
+meaningless at other times.</para>
 
     </refsect2>
 
