@@ -1,5 +1,7 @@
 2004-11-15  John Finlay  <finlay@moeraki.com>
 
+	* pygtk-gdkdragcontext.xml (drag_drop_succeeded): Add description.
+
 	* pygtk-gdkdisplay.xml (store_clipboard)
 	(request_selection_notification, supports_clipboard_persistence
 	(supports_selection_notification): Add descriptions.
